--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #94b9fd;
+    background-color: #fcf2eb;
     font-family: 'Roboto',sans-serif;
     display: flex;
     flex-direction: column;align-items: center;
@@ -14,11 +14,16 @@ body{
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     padding: 50px 20px;
     text-align: center;
-    max-width: 100%;
-    width: 800px;
+    width: 80%;
+    margin: auto;
+    border-radius: 10px;
+    max-height: 500px;
+    overflow-y: auto; 
+ 
+    
 }
 h3{
     margin: 0;
@@ -31,16 +36,18 @@ h3{
     line-height: 40px;
     margin: 50px auto;
     max-width: 600px;
+    color: #797776;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
 .btn{
-    background-color: #e09668;
-    padding: 14px 40px;
+    background-color: #dfb398;
+    padding: 10px 30px;
     border-radius: 10px;
-    color: white;
-    font-size: 18px;
-    letter-spacing: 1px;
+    color: rgb(66, 49, 49);
+    letter-spacing: 2px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1),6px 6px  rgba(0,0,0,0.1);
     cursor: pointer;
+    
 }
 .btn:active{
     transform: scale(0.98s);
@@ -48,3 +55,45 @@ h3{
 .btn:focus{
     outline: 0;
 }
+.loading{
+color: #2f231c;
+letter-spacing: 2px;
+font-weight: bold;
+padding: 20px;
+
+
+}
+
+@media only screen and (max-width:600px) {
+    .container{
+        width: 90%;
+    }
+    .btn {
+        padding: 8px 20px;
+      }
+}
+@media only screen and (min-width:601px) and (max-width:900px){
+    .container{
+        width: 80%;
+    }
+    .btn {
+        padding: 10px 25px;
+      }
+}
+@media only screen and (min-width: 901px) and (max-width: 1200px) {
+    .container {
+      width: 70%;
+    }
+    .btn {
+        padding: 12px 30px;
+      }
+  }
+
+  @media only screen and (min-width: 1201px) {
+    .container {
+      width: 60%;
+    }
+    .btn {
+        padding: 14px 35px;
+      }
+  }
